# datasimulator

./: .env.example  .gitignore  GENERATOR_PROMPT_TEMPLATE.md  LICENSE  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  QUICKSTART_ACCOUNTING.md  README.md  pyproject.toml  requirements.txt
datasimulator/: __init__.py  sdk.py
datasimulator/analytics/: __init__.py  visualizations.py
datasimulator/core/: __init__.py  data_models.py
datasimulator/core/generators/: __init__.py  base_generator.py  dpo_generator.py  grpo_generator.py  ppo_generator.py  rl_verifiable_generator.py  sft_generator.py  verifiable_qa_generator.py
datasimulator/core/models/: __init__.py  llm_client.py
datasimulator/planning/: __init__.py  gemini_planner.py
datasimulator/quality/: diversity_checker.py  human_review.py  quality_scorer.py  validators.py
datasimulator/refinement/: __init__.py  iterative_refiner.py
datasimulator/sources/: __init__.py  base_loader.py  document_loader.py
datasimulator/sources/loaders/: google_docs_loader.py  image_loader.py  pdf_loader.py  web_scraper.py  word_loader.py
datasimulator/utils/: cost_tracker.py
examples/: COST_ESTIMATE.md  README.md  accounting_production_example.py  all_generators_example.py  autonomous_batch_example.py  basic_sft_example.py  dpo_example.py  human_review_example.py  multiple_sources_example.py  pdf_loader_example.py  quality_control_example.py  rl_verifiable_example.py  web_scraping_example.py  with_source_document.py
examples/accounting_docs/: README.md
